--- a/app/assets/stylesheets/application.sass.scss
+++ b/app/assets/stylesheets/application.sass.scss
@@ -15,6 +15,7 @@
 @import "components/quote";
 @import "components/turbo_progress_bar";
 @import "components/navbar";
+@import "components/empty_state";
 
 // Layouts
 @import "layouts/container";
